--- a/src/components/calendar.css
+++ b/src/components/calendar.css
@@ -16,6 +16,7 @@
 
 .calendar-header button {
   background-color: transparent;
+  border-radius: 10px;
   border: none;
   outline: none;
   font-size: 20px;
@@ -46,14 +47,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 40px;
+  width: 40px;
   font-size: 16px;
   transition: transform 0.2s ease-in-out, font-weight 0.2s ease-in-out;
-
+  border-radius: 10px;
+  margin: 2px 2px;
 }
 
 .calendar-day:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
   font-weight: 700;
   cursor: pointer;
 }
@@ -79,21 +82,7 @@
   font-size: 14px;
   background-color: transparent;
   text-align: center;
+  border-radius: 10px;
+
 }
 
-@media (max-width: 768px) {
-  .calendar-body {
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-  }
-}
-
-@media (max-width: 576px) {
-  .calendar-day {
-    font-size: 14px;
-  }
-
-  .calendar-day-header {
-    font-size: 12px;
-  }
-}
