--- a/src/components/clock.css
+++ b/src/components/clock.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80%;
+  width: 80%;
 }
 
 .clock-time {
-  font-size: 10rem;
+  font-size: 6em;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
